--- a/app/src/main/res/layout/fragment_avaliable.xml
+++ b/app/src/main/res/layout/fragment_avaliable.xml
@@ -1,60 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tool="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:padding="16dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/layout_topic"
         android:layout_width="match_parent"
-        android:layout_height="48dp">
+        android:layout_height="48dp"
+        android:orientation="horizontal"
+        android:background="@color/headDetail"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-        <LinearLayout
-            android:id="@+id/layout_store"
-            android:layout_width="wrap_content"
+        <cenergy.central.com.pwb_store.view.PowerBuyTextView
+            android:id="@+id/text_store"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:background="?attr/selectableItemBackground"
-            android:clickable="true"
-            android:orientation="horizontal"
-            android:visibility="gone">
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:gravity="center|center_vertical"
+            android:text="@string/store_code"
+            android:textColor="@color/nameProductColor"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-            <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                android:id="@+id/txt_filter"
-                style="@style/textSize18Sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="15dp"
-                android:ellipsize="end"
-                android:text="@string/select_store"
-                android:textStyle="bold"/>
+        <cenergy.central.com.pwb_store.view.PowerBuyTextView
+            android:id="@+id/text_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="2"
+            android:gravity="center|center_vertical"
+            android:text="@string/store_name"
+            android:textColor="@color/nameProductColor"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="10dp"
-                android:src="@drawable/ic_keyboard_arrow_down"/>
+        <cenergy.central.com.pwb_store.view.PowerBuyTextView
+            android:id="@+id/telephone_text_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="2"
+            android:gravity="center|center_vertical"
+            android:text="@string/telephone"
+            android:textColor="@color/nameProductColor"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-        </LinearLayout>
+        <cenergy.central.com.pwb_store.view.PowerBuyTextView
+            android:id="@+id/text_stock"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:gravity="center|center_vertical"
+            android:text="@string/stock"
+            android:textColor="@color/nameProductColor"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
-    </RelativeLayout>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </android.support.v7.widget.RecyclerView>
-
-    </FrameLayout>
-</LinearLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/layout_topic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+</android.support.constraint.ConstraintLayout>
