--- a/app/src/main/res/layout/list_item_avaliable_detail.xml
+++ b/app/src/main/res/layout/list_item_avaliable_detail.xml
@@ -1,66 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp">
+    android:paddingTop="16dp"
+    android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <cenergy.central.com.pwb_store.view.PowerBuyTextView
+        android:id="@+id/textStoreCode"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:orientation="horizontal">
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:gravity="start"
+        android:inputType="textMultiLine"
+        android:textColor="@color/nameProductColor"
+        android:textSize="16sp"
+        tools:text="@string/store_code" />
 
-        <cenergy.central.com.pwb_store.view.PowerBuyTextView
-            android:id="@+id/text_store"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="left"
-            android:layout_gravity="center"
-            android:textSize="16sp"
-            android:inputType="textMultiLine"
-            android:textColor="@color/nameProductColor"
-            tools:text="@string/store_code"/>
+    <cenergy.central.com.pwb_store.view.PowerBuyTextView
+        android:id="@+id/textName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="2"
+        android:gravity="center"
+        android:inputType="textMultiLine"
+        android:textColor="@color/nameProductColor"
+        android:textSize="16sp"
+        tools:text="Name" />
 
-        <cenergy.central.com.pwb_store.view.PowerBuyTextView
-            android:id="@+id/text_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:textSize="16sp"
-            android:inputType="textMultiLine"
-            android:textColor="@color/nameProductColor"
-            tools:text="Name"/>
+    <cenergy.central.com.pwb_store.view.PowerBuyTextView
+        android:id="@+id/textTelephone"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="2"
+        android:gravity="center"
+        android:inputType="textMultiLine"
+        android:textColor="@color/nameProductColor"
+        android:textSize="16sp"
+        tools:text="Tel" />
 
-        <cenergy.central.com.pwb_store.view.PowerBuyTextView
-            android:id="@+id/text_telephone"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:gravity="start|center_vertical"
-            android:layout_gravity="center"
-            android:textSize="16sp"
-            android:inputType="textMultiLine"
-            android:textColor="@color/nameProductColor"
-            tools:text="Tel"/>
-
-        <cenergy.central.com.pwb_store.view.PowerBuyTextView
-            android:id="@+id/text_stock"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:textSize="16sp"
-            android:inputType="textMultiLine"
-            android:textColor="@color/nameProductColor"
-            tools:text="@string/stock"/>
-    </LinearLayout>
-
-</RelativeLayout>
+    <cenergy.central.com.pwb_store.view.PowerBuyTextView
+        android:id="@+id/textStock"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:inputType="textMultiLine"
+        android:textColor="@color/nameProductColor"
+        android:textSize="16sp"
+        tools:text="@string/stock" />
+</LinearLayout>
  
