--- a/app/src/main/res/layout/list_item_loading_result.xml
+++ b/app/src/main/res/layout/list_item_loading_result.xml
@@ -10,10 +10,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:gravity="center"
         android:padding="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:text="ไม่พบข้อมูลที่ค้นหา"
+        android:text="@string/search_not_found"
         android:textSize="40sp"
         app:typeFaceAsset="RobotoLight.ttf" />
 
