--- a/app/src/main/res/layout/list_item_product_filter_header.xml
+++ b/app/src/main/res/layout/list_item_product_filter_header.xml
@@ -6,7 +6,7 @@
     android:id="@+id/head_frame"
     android:layout_width="200dp"
     android:layout_height="wrap_content"
-    android:background="@color/white">
+    android:background="?attr/selectableItemBackground">
 
     <ImageView
         android:id="@+id/img_fill_back"
