--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -17,7 +17,7 @@
     <!-- endregion -->
 
     <!-- region content-->
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:fillViewport="true"
@@ -25,7 +25,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/actionbar">
 
-        <LinearLayout
+        <android.support.constraint.ConstraintLayout
             android:id="@+id/containerGroupView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -33,12 +33,14 @@
 
             <FrameLayout
                 android:id="@+id/containerDetail"
+                app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white" />
 
             <FrameLayout
                 android:id="@+id/containerOverview"
+                app:layout_constraintTop_toBottomOf="@+id/containerDetail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white" />
@@ -47,10 +49,11 @@
                 android:id="@+id/containerExtension"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/containerOverview"
                 android:background="@color/white" />
 
-        </LinearLayout>
-    </ScrollView>
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v4.widget.NestedScrollView>
 
     <TextView
         android:id="@+id/tvNotFound"
