--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -61,6 +61,8 @@
     <color name="toggleFill">@color/colorPrimary</color>
     <color name="toggleStroke">@color/white</color>
 
+    <color name="tabCalendarColor">@color/colorPrimaryDark</color>
+
     <color name="textDefaultColor">@color/pwbOrange</color>
     <color name="cursorColor">@color/pwbOrange</color>
 
