--- a/app/src/rbs/res/drawable/ic_freebies_selected.xml
+++ b/app/src/rbs/res/drawable/ic_freebies_selected.xml
@@ -6,29 +6,29 @@
     <path
         android:fillColor="#00000000"
         android:pathData="M23,14.7H6.9c-0.3,0 -0.6,-0.3 -0.6,-0.6v-3.4c0,-0.3 0.3,-0.6 0.6,-0.6H23c0.3,0 0.6,0.3 0.6,0.6v3.4C23.6,14.4 23.3,14.7 23,14.7z"
-        android:strokeColor="#A6192E"
+        android:strokeColor="#72bf44"
         android:strokeWidth="0.6"/>
     <path
         android:fillColor="#00000000"
         android:pathData="M7.3,14.7v5.7c0,1.3 1.1,2.4 2.4,2.4h10.4c1.3,0 2.4,-1.1 2.4,-2.4v-5.7H7.3z"
-        android:strokeColor="#A6192E"
+        android:strokeColor="#72bf44"
         android:strokeWidth="0.6"/>
     <path
         android:fillColor="#00000000"
         android:pathData="M15,22.8L15,10.1"
-        android:strokeColor="#A6192E"
+        android:strokeColor="#72bf44"
         android:strokeWidth="0.6"/>
     <path
         android:fillColor="#00000000"
         android:pathData="M17.1,6.4c-0.8,0 -1.3,0.5 -1.6,1.4L15,10l2.2,-0.5c0.9,-0.2 1.4,-0.7 1.4,-1.6C18.6,7.1 18,6.4 17.1,6.4z"
-        android:strokeColor="#A6192E"
+        android:strokeColor="#72bf44"
         android:strokeLineCap="round"
         android:strokeLineJoin="round"
         android:strokeWidth="0.6"/>
     <path
         android:fillColor="#00000000"
         android:pathData="M12.9,6.4c0.8,0 1.3,0.5 1.6,1.4L15,10l-2.2,-0.5c-0.9,-0.2 -1.4,-0.7 -1.4,-1.6C11.4,7.1 12.1,6.4 12.9,6.4z"
-        android:strokeColor="#A6192E"
+        android:strokeColor="#72bf44"
         android:strokeLineCap="round"
         android:strokeLineJoin="round"
         android:strokeWidth="0.6"/>
