--- a/app/src/rbs/res/drawable/ic_overview.xml
+++ b/app/src/rbs/res/drawable/ic_overview.xml
@@ -7,21 +7,21 @@
       android:pathData="M12,3l8,4.4444l0,8.8889l-8,4.4444l-8,-4.4444l0,-8.8889z"
       android:strokeWidth="0.5"
       android:fillColor="#00000000"
-      android:strokeColor="#A6192E"
+      android:strokeColor="#72bf44"
       android:fillType="evenOdd"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M4,7.4444l8,4.4444l8,-4.4444"
       android:strokeWidth="0.5"
       android:fillColor="#00000000"
-      android:strokeColor="#A6192E"
+      android:strokeColor="#72bf44"
       android:fillType="evenOdd"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M12,11.8889L12,20.7778"
       android:strokeWidth="0.5"
       android:fillColor="#00000000"
-      android:strokeColor="#A6192E"
+      android:strokeColor="#72bf44"
       android:fillType="evenOdd"
       android:strokeLineCap="round"/>
 </vector>
