Added text color for staff sections on success page

--- a/app/src/cds/res/values/colors.xml
+++ b/app/src/cds/res/values/colors.xml
@@ -27,6 +27,7 @@
 
     <color name="textDefaultColor">@color/cdsRed</color>
     <color name="cursorColor">@color/cdsRed</color>
+    <color name="textStaffColor">@color/cdsRed</color>
 
     <color name="categoryColor">#F4893F</color>
 
