--- a/app/src/rbs/res/values/colors.xml
+++ b/app/src/rbs/res/values/colors.xml
@@ -23,6 +23,7 @@
 
     <color name="textDefaultColor">@color/colorAccent</color>
     <color name="cursorColor">@color/colorAccent</color>
+    <color name="textStaffColor">@color/colorAccent</color>
 
     <color name="categoryColor">@color/colorAccent</color>
 
