Added ic_placeholder for RBS

--- a/app/src/main/res/layout/list_item_compare_product.xml
+++ b/app/src/main/res/layout/list_item_compare_product.xml
@@ -41,7 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="10dp"
-                android:src="@drawable/ic_pwb_logo_detail"
+                android:src="@drawable/ic_placeholder"
                 android:contentDescription="@string/app_name" />
 
         </LinearLayout>
