--- a/app/src/main/res/layout/adapter_product_image.xml
+++ b/app/src/main/res/layout/adapter_product_image.xml
@@ -23,6 +23,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_pwb_logo_detail" />
+        tools:src="@drawable/ic_placeholder" />
 
 </android.support.constraint.ConstraintLayout>
