--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -28,7 +28,7 @@
         app:layout_constraintEnd_toStartOf="@id/guideline40"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_pwb_logo_detail" />
+        tools:src="@drawable/ic_placeholder" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvProductImage"
