--- a/app/src/main/res/layout/item_list_order_product.xml
+++ b/app/src/main/res/layout/item_list_order_product.xml
@@ -25,7 +25,7 @@
             android:background="@drawable/border_grey"
             android:contentDescription="@string/app_name"
             android:padding="8dp"
-            tools:src="@drawable/ic_pwb_logo_detail" />
+            tools:src="@drawable/ic_placeholder" />
 
         <LinearLayout
             android:layout_width="match_parent"
