--- a/app/src/main/res/layout/list_item_pay_at_store.xml
+++ b/app/src/main/res/layout/list_item_pay_at_store.xml
@@ -29,7 +29,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
-        android:text="@string/pay_at_store"
+        android:text="@string/pay_at_store_description"
         android:textColor="@color/graySelect"
         android:textSize="16sp"
         android:textStyle="bold"
