--- a/app/src/main/res/drawable/ic_the1.xml
+++ b/app/src/main/res/drawable/ic_the1.xml
@@ -1,9 +1,24 @@
-<vector android:height="24dp" android:viewportHeight="500"
-    android:viewportWidth="500" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#231F20" android:pathData="M20.1,20h460.3v460.3h-460.3z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M56.5,222.9l37.6,0l0,115l15.4,0l0,-115l37.7,0l0,-14.3l-90.7,0z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M205.6,248.7c-12.9,0 -23.4,5.9 -28.3,14.5v-54.7h-14.8v129.3h14.8V287c1.5,-16.7 13.1,-24.9 25.6,-24.9c16.3,0 22.4,10.5 22.4,23.8v52h14.8v-48.7c0,-13.5 -1.4,-17.6 -2.9,-21.5C232.8,256.2 220.6,248.7 205.6,248.7z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M338.3,294.6c0,-12.8 -3.7,-23.8 -10.6,-32.1c-7.5,-8.9 -18.3,-13.7 -31.3,-13.8v0c-12.2,0.3 -22.5,4.9 -29.9,13.3c-7.3,8.3 -11.1,19.5 -11.1,32.6c0,12.7 3.7,23.7 10.8,31.9c7.4,8.5 17.8,13.2 30.3,13.5v0c12.7,-0.1 23.4,-4.6 30.9,-13c3,-3.4 5.4,-7.3 7.2,-11.6l-12.4,-4.5c-1.2,2.9 -2.9,5.4 -4.8,7.6c-5.1,5.7 -12.3,8.8 -20.9,8.9v0c-8.7,-0.3 -15.4,-3.3 -20,-8.9c-3.6,-4.4 -5.8,-10.4 -6.6,-17.5h26.6H338h0l0,0C338.2,298.8 338.3,296.8 338.3,294.6zM296.4,289.9h-26.8c0.7,-8 3.1,-14.7 7.1,-19.6c4.7,-5.7 11.3,-8.8 19.7,-9.1v0c9,0.1 15.8,3.2 20.3,9.1c3.6,4.8 5.8,11.5 6.3,19.6H296.4z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M356.1,119.8l0,31.7l23.7,0l0,186.4l31.6,0l0,-218.1z"/>
-    <path android:fillColor="#DD1A22" android:pathData="M347.1,354.7h96.9v25h-96.9z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="42dp"
+    android:height="42dp"
+    android:viewportWidth="500"
+    android:viewportHeight="500">
+    <path
+        android:fillColor="#231F20"
+        android:pathData="M20.1,20h460.3v460.3h-460.3z" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M56.5,222.9l37.6,0l0,115l15.4,0l0,-115l37.7,0l0,-14.3l-90.7,0z" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M205.6,248.7c-12.9,0 -23.4,5.9 -28.3,14.5v-54.7h-14.8v129.3h14.8V287c1.5,-16.7 13.1,-24.9 25.6,-24.9c16.3,0 22.4,10.5 22.4,23.8v52h14.8v-48.7c0,-13.5 -1.4,-17.6 -2.9,-21.5C232.8,256.2 220.6,248.7 205.6,248.7z" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M338.3,294.6c0,-12.8 -3.7,-23.8 -10.6,-32.1c-7.5,-8.9 -18.3,-13.7 -31.3,-13.8v0c-12.2,0.3 -22.5,4.9 -29.9,13.3c-7.3,8.3 -11.1,19.5 -11.1,32.6c0,12.7 3.7,23.7 10.8,31.9c7.4,8.5 17.8,13.2 30.3,13.5v0c12.7,-0.1 23.4,-4.6 30.9,-13c3,-3.4 5.4,-7.3 7.2,-11.6l-12.4,-4.5c-1.2,2.9 -2.9,5.4 -4.8,7.6c-5.1,5.7 -12.3,8.8 -20.9,8.9v0c-8.7,-0.3 -15.4,-3.3 -20,-8.9c-3.6,-4.4 -5.8,-10.4 -6.6,-17.5h26.6H338h0l0,0C338.2,298.8 338.3,296.8 338.3,294.6zM296.4,289.9h-26.8c0.7,-8 3.1,-14.7 7.1,-19.6c4.7,-5.7 11.3,-8.8 19.7,-9.1v0c9,0.1 15.8,3.2 20.3,9.1c3.6,4.8 5.8,11.5 6.3,19.6H296.4z" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M356.1,119.8l0,31.7l23.7,0l0,186.4l31.6,0l0,-218.1z" />
+    <path
+        android:fillColor="#DD1A22"
+        android:pathData="M347.1,354.7h96.9v25h-96.9z" />
 </vector>
